@@ -19,23 +19,22 @@ package org.springframework.ai.openai;
 import java.net.Proxy;
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Set;
 
 import com.openai.azure.AzureOpenAIServiceVersion;
 import com.openai.credential.Credential;
 import com.openai.models.ChatModel;
 import com.openai.models.chat.completions.ChatCompletionAudioParam;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.jspecify.annotations.Nullable;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import org.springframework.ai.chat.prompt.ChatOptions;
+import org.springframework.ai.model.ApiKey;
+import org.springframework.ai.model.NoopApiKey;
 import org.springframework.ai.model.tool.DefaultToolCallingChatOptions;
 import org.springframework.ai.model.tool.StructuredOutputChatOptions;
 import org.springframework.ai.model.tool.ToolCallingChatOptions;
@@ -55,7 +54,7 @@ import org.springframework.ai.tool.ToolCallback;
  */
 public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutputChatOptions {
 
-	private static final Logger logger = LoggerFactory.getLogger(OpenAiChatOptions.class);
+	private static final Log logger = LogFactory.getLog(OpenAiChatOptions.class);
 
 	public static final String DEFAULT_CHAT_MODEL = ChatModel.GPT_5_MINI.asString();
 
@@ -78,7 +77,7 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 	 * The model name used. When using Microsoft Foundry, this is also used as the default
 	 * deployment name.
 	 */
-	private final @Nullable String model;
+	private final String model;
 
 	/**
 	 * The deployment name as defined in Microsoft Foundry. On Microsoft Foundry, the
@@ -120,12 +119,12 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 	/**
 	 * Proxy settings for OpenAI client.
 	 */
-	private @Nullable Proxy proxy;
+	private final @Nullable Proxy proxy;
 
 	/**
 	 * Custom HTTP headers to add to OpenAI client requests.
 	 */
-	private final Map<String, String> customHeaders;
+	private final @Nullable Map<String, String> customHeaders;
 
 	private final @Nullable Double frequencyPenalty;
 
@@ -183,13 +182,9 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 	 */
 	private final @Nullable Map<String, Object> extraBody;
 
-	private final List<ToolCallback> toolCallbacks;
+	private final @Nullable List<ToolCallback> toolCallbacks;
 
-	private final Set<String> toolNames;
-
-	private final @Nullable Boolean internalToolExecutionEnabled;
-
-	private final Map<String, Object> toolContext;
+	private final @Nullable Map<String, Object> toolContext;
 
 	protected OpenAiChatOptions(@Nullable String baseUrl, @Nullable String apiKey, @Nullable Credential credential,
 			@Nullable String model, @Nullable String microsoftDeploymentName,
@@ -198,8 +193,7 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 			@Nullable Integer maxRetries, @Nullable Proxy proxy, @Nullable Map<String, String> customHeaders,
 			@Nullable Double frequencyPenalty, @Nullable Integer maxTokens, @Nullable Double presencePenalty,
 			@Nullable List<String> stop, @Nullable Double temperature, @Nullable Double topP,
-			@Nullable List<ToolCallback> toolCallbacks, @Nullable Set<String> toolNames,
-			@Nullable Map<String, Object> toolContext, @Nullable Boolean internalToolExecutionEnabled,
+			@Nullable List<ToolCallback> toolCallbacks, @Nullable Map<String, Object> toolContext,
 			@Nullable Map<String, Integer> logitBias, @Nullable Boolean logprobs, @Nullable Integer topLogprobs,
 			@Nullable Integer maxCompletionTokens, @Nullable Integer n, @Nullable List<String> outputModalities,
 			@Nullable AudioParameters outputAudio, OpenAiChatModel.@Nullable ResponseFormat responseFormat,
@@ -210,35 +204,33 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 		this.baseUrl = baseUrl;
 		this.apiKey = apiKey;
 		this.credential = credential;
-		this.model = model;
+		this.model = model != null ? model : DEFAULT_CHAT_MODEL;
 		this.microsoftDeploymentName = microsoftDeploymentName;
 		this.microsoftFoundryServiceVersion = microsoftFoundryServiceVersion;
 		this.organizationId = organizationId;
 		this.isMicrosoftFoundry = (isMicrosoftFoundry != null ? isMicrosoftFoundry : false);
 		this.isGitHubModels = (isGitHubModels != null ? isGitHubModels : false);
 		this.timeout = (timeout != null ? timeout : AbstractOpenAiOptions.DEFAULT_TIMEOUT);
-		this.maxRetries = (timeout != null ? maxRetries : AbstractOpenAiOptions.DEFAULT_MAX_RETRIES);
+		this.maxRetries = (maxRetries != null ? maxRetries : AbstractOpenAiOptions.DEFAULT_MAX_RETRIES);
 		this.proxy = proxy;
-		this.customHeaders = (customHeaders != null ? customHeaders : Collections.emptyMap());
+		this.customHeaders = (customHeaders != null ? Map.copyOf(customHeaders) : null);
 		// ChatOptions
 		this.frequencyPenalty = frequencyPenalty;
 		this.maxTokens = maxTokens;
 		this.presencePenalty = presencePenalty;
-		this.stop = stop;
+		this.stop = (stop != null ? List.copyOf(stop) : null);
 		this.temperature = temperature;
 		this.topP = topP;
 		// ToolCallingChatOptions
-		this.toolCallbacks = (toolCallbacks != null ? toolCallbacks : Collections.emptyList());
-		this.toolNames = (toolNames != null ? toolNames : Collections.emptySet());
-		this.toolContext = (toolContext != null ? toolContext : Collections.emptyMap());
-		this.internalToolExecutionEnabled = internalToolExecutionEnabled;
+		this.toolCallbacks = (toolCallbacks != null ? List.copyOf(toolCallbacks) : null);
+		this.toolContext = (toolContext != null ? Map.copyOf(toolContext) : null);
 		// OpenAI SDK specific
-		this.logitBias = logitBias;
+		this.logitBias = (logitBias != null ? Map.copyOf(logitBias) : null);
 		this.logprobs = logprobs;
 		this.topLogprobs = topLogprobs;
 		this.maxCompletionTokens = maxCompletionTokens;
 		this.n = n;
-		this.outputModalities = outputModalities;
+		this.outputModalities = (outputModalities != null ? List.copyOf(outputModalities) : null);
 		this.outputAudio = outputAudio;
 		this.responseFormat = responseFormat;
 		this.streamOptions = streamOptions;
@@ -247,11 +239,11 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 		this.user = user;
 		this.parallelToolCalls = parallelToolCalls;
 		this.store = store;
-		this.metadata = metadata;
+		this.metadata = (metadata != null ? Map.copyOf(metadata) : null);
 		this.reasoningEffort = reasoningEffort;
 		this.verbosity = verbosity;
 		this.serviceTier = serviceTier;
-		this.extraBody = extraBody;
+		this.extraBody = (extraBody != null ? Map.copyOf(extraBody) : null);
 	}
 
 	/**
@@ -271,7 +263,7 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 	}
 
 	@Override
-	public @Nullable String getModel() {
+	public String getModel() {
 		return this.model;
 	}
 
@@ -314,7 +306,7 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 		return this.proxy;
 	}
 
-	public Map<String, String> getCustomHeaders() {
+	public @Nullable Map<String, String> getCustomHeaders() {
 		return this.customHeaders;
 	}
 
@@ -505,22 +497,12 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 	}
 
 	@Override
-	public List<ToolCallback> getToolCallbacks() {
+	public @Nullable List<ToolCallback> getToolCallbacks() {
 		return this.toolCallbacks;
 	}
 
 	@Override
-	public Set<String> getToolNames() {
-		return this.toolNames;
-	}
-
-	@Override
-	public @Nullable Boolean getInternalToolExecutionEnabled() {
-		return this.internalToolExecutionEnabled;
-	}
-
-	@Override
-	public Map<String, Object> getToolContext() {
+	public @Nullable Map<String, Object> getToolContext() {
 		return this.toolContext;
 	}
 
@@ -539,15 +521,6 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 		return new Builder();
 	}
 
-	public static OpenAiChatOptions fromOptions(OpenAiChatOptions fromOptions) {
-		return fromOptions.mutate().build();
-	}
-
-	@Override
-	public OpenAiChatOptions copy() {
-		return mutate().build();
-	}
-
 	@Override
 	public Builder mutate() {
 		return builder()
@@ -564,26 +537,24 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 			.timeout(this.getTimeout())
 			.maxRetries(this.getMaxRetries())
 			.proxy(this.getProxy())
-			.customHeaders(new HashMap<>(this.getCustomHeaders()))
+			.customHeaders(this.getCustomHeaders())
 			// ChatOptions
 			.frequencyPenalty(this.frequencyPenalty)
 			.maxTokens(this.maxTokens)
 			.presencePenalty(this.presencePenalty)
-			.stopSequences(this.stop != null ? new ArrayList<>(this.stop) : null)
+			.stopSequences(this.stop)
 			.temperature(this.temperature)
 			.topP(this.topP)
 			// ToolCallingChatOptions
-			.toolCallbacks(new ArrayList<>(this.getToolCallbacks()))
-			.toolNames(new HashSet<>(this.getToolNames()))
-			.toolContext(new HashMap<>(this.getToolContext()))
-			.internalToolExecutionEnabled(this.getInternalToolExecutionEnabled())
+			.toolCallbacks(this.getToolCallbacks())
+			.toolContext(this.getToolContext())
 			// OpenAI SDK specific
-			.logitBias(this.logitBias != null ? new HashMap<>(this.logitBias) : null)
+			.logitBias(this.logitBias)
 			.logprobs(this.logprobs)
 			.topLogprobs(this.topLogprobs)
 			.maxCompletionTokens(this.maxCompletionTokens)
 			.n(this.n)
-			.outputModalities(this.outputModalities != null ? new ArrayList<>(this.outputModalities) : null)
+			.outputModalities(this.outputModalities)
 			.outputAudio(this.outputAudio)
 			.responseFormat(this.responseFormat)
 			.streamOptions(this.streamOptions)
@@ -592,15 +563,18 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 			.user(this.user)
 			.parallelToolCalls(this.parallelToolCalls)
 			.store(this.store)
-			.metadata(this.metadata != null ? new HashMap<>(this.metadata) : null)
+			.metadata(this.metadata)
 			.reasoningEffort(this.reasoningEffort)
 			.verbosity(this.verbosity)
 			.serviceTier(this.serviceTier)
-			.extraBody(this.extraBody != null ? new HashMap<>(this.extraBody) : null);
+			.extraBody(this.extraBody);
 	}
 
 	@Override
-	public boolean equals(Object o) {
+	public boolean equals(@Nullable Object o) {
+		if (this == o) {
+			return true;
+		}
 		if (o == null || getClass() != o.getClass()) {
 			return false;
 		}
@@ -626,8 +600,6 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 				&& Objects.equals(this.serviceTier, options.serviceTier)
 				&& Objects.equals(this.extraBody, options.extraBody)
 				&& Objects.equals(this.toolCallbacks, options.toolCallbacks)
-				&& Objects.equals(this.toolNames, options.toolNames)
-				&& Objects.equals(this.internalToolExecutionEnabled, options.internalToolExecutionEnabled)
 				&& Objects.equals(this.toolContext, options.toolContext);
 	}
 
@@ -638,24 +610,7 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 				this.presencePenalty, this.responseFormat, this.streamOptions, this.seed, this.stop, this.temperature,
 				this.topP, this.toolChoice, this.user, this.parallelToolCalls, this.store, this.metadata,
 				this.reasoningEffort, this.verbosity, this.serviceTier, this.extraBody, this.toolCallbacks,
-				this.toolNames, this.internalToolExecutionEnabled, this.toolContext);
-	}
-
-	@Override
-	public String toString() {
-		return "OpenAiChatOptions{" + "model='" + this.getModel() + ", frequencyPenalty=" + this.frequencyPenalty
-				+ ", logitBias=" + this.logitBias + ", logprobs=" + this.logprobs + ", topLogprobs=" + this.topLogprobs
-				+ ", maxTokens=" + this.maxTokens + ", maxCompletionTokens=" + this.maxCompletionTokens + ", n="
-				+ this.n + ", outputModalities=" + this.outputModalities + ", outputAudio=" + this.outputAudio
-				+ ", presencePenalty=" + this.presencePenalty + ", responseFormat=" + this.responseFormat
-				+ ", streamOptions=" + this.streamOptions + ", streamUsage=" + ", seed=" + this.seed + ", stop="
-				+ this.stop + ", temperature=" + this.temperature + ", topP=" + this.topP + ", toolChoice="
-				+ this.toolChoice + ", user='" + this.user + '\'' + ", parallelToolCalls=" + this.parallelToolCalls
-				+ ", store=" + this.store + ", metadata=" + this.metadata + ", reasoningEffort='" + this.reasoningEffort
-				+ '\'' + ", verbosity='" + this.verbosity + '\'' + ", serviceTier='" + this.serviceTier + '\''
-				+ ", extraBody=" + this.extraBody + ", toolCallbacks=" + this.toolCallbacks + ", toolNames="
-				+ this.toolNames + ", internalToolExecutionEnabled=" + this.internalToolExecutionEnabled
-				+ ", toolContext=" + this.toolContext + '}';
+				this.toolContext);
 	}
 
 	public record AudioParameters(@Nullable Voice voice, @Nullable AudioResponseFormat format) {
@@ -726,8 +681,7 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 			}
 
 			public Builder additionalProperties(@Nullable Map<String, Object> additionalProperties) {
-				this.additionalProperties = additionalProperties != null ? new HashMap<>(additionalProperties)
-						: new HashMap<>();
+				this.additionalProperties = additionalProperties;
 				return this;
 			}
 
@@ -760,11 +714,11 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 		public B clone() {
 			B copy = super.clone();
 			if (this.customHeaders != null && !this.customHeaders.isEmpty()) {
-				copy.customHeaders = new HashMap<>(this.customHeaders);
+				copy.customHeaders = this.customHeaders;
 			}
-			copy.logitBias = this.logitBias == null ? null : new HashMap<>(this.logitBias);
-			copy.outputModalities = this.outputModalities == null ? null : new ArrayList<>(this.outputModalities);
-			copy.metadata = this.metadata == null ? null : new HashMap<>(this.metadata);
+			copy.logitBias = this.logitBias;
+			copy.outputModalities = this.outputModalities;
+			copy.metadata = this.metadata;
 			return copy;
 		}
 
@@ -790,7 +744,7 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 
 		protected @Nullable Proxy proxy;
 
-		protected Map<String, String> customHeaders = new HashMap<>();
+		protected @Nullable Map<String, String> customHeaders;
 
 		// OpenAI SDK specific fields
 		protected @Nullable Map<String, Integer> logitBias;
@@ -832,111 +786,18 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 		protected @Nullable Map<String, Object> extraBody;
 
 		@Override
-		public B toolCallbacks(@Nullable List<ToolCallback> toolCallbacks) {
-			this.toolCallbacks = toolCallbacks != null ? new ArrayList<>(toolCallbacks) : null;
-			return self();
-		}
-
-		@Override
-		public B toolCallbacks(ToolCallback... toolCallbacks) {
-			if (this.toolCallbacks == null) {
-				this.toolCallbacks = new ArrayList<>();
-			}
-			this.toolCallbacks.addAll(java.util.Arrays.asList(toolCallbacks));
-			return self();
-		}
-
-		@Override
-		public B toolNames(@Nullable Set<String> toolNames) {
-			this.toolNames = toolNames != null ? new HashSet<>(toolNames) : null;
-			return self();
-		}
-
-		@Override
-		public B toolNames(String... toolNames) {
-			if (this.toolNames == null) {
-				this.toolNames = new HashSet<>();
-			}
-			this.toolNames.addAll(Set.of(toolNames));
-			return self();
-		}
-
-		@Override
-		public B toolContext(@Nullable Map<String, Object> context) {
-			if (context != null) {
-				if (this.toolContext == null) {
-					this.toolContext = new HashMap<>();
-				}
-				this.toolContext.putAll(context);
-			}
-			else {
-				this.toolContext = null;
-			}
-			return self();
-		}
-
-		@Override
-		public B toolContext(String key, Object value) {
-			if (this.toolContext == null) {
-				this.toolContext = new HashMap<>();
-			}
-			this.toolContext.put(key, value);
-			return self();
-		}
-
-		@Override
-		public B internalToolExecutionEnabled(@Nullable Boolean internalToolExecutionEnabled) {
-			this.internalToolExecutionEnabled = internalToolExecutionEnabled;
-			return self();
-		}
-
-		@Override
-		public B frequencyPenalty(@Nullable Double frequencyPenalty) {
-			this.frequencyPenalty = frequencyPenalty;
-			return self();
-		}
-
-		@Override
 		public B maxTokens(@Nullable Integer maxTokens) {
 			if (this.maxCompletionTokens != null) {
-				logger.warn(
-						"Both maxTokens and maxCompletionTokens are set. OpenAI API does not support setting both parameters simultaneously. "
-								+ "As maxToken is deprecated, we will ignore it and use maxCompletionToken ({}).",
-						this.maxCompletionTokens);
+				if (logger.isWarnEnabled()) {
+					logger.warn(
+							"Both maxTokens and maxCompletionTokens are set. OpenAI API does not support setting both parameters simultaneously. "
+									+ "As maxToken is deprecated, we will ignore it and use maxCompletionToken ("
+									+ this.maxCompletionTokens + ").");
+				}
 			}
 			else {
 				this.maxTokens = maxTokens;
 			}
-			return self();
-		}
-
-		@Override
-		public B presencePenalty(@Nullable Double presencePenalty) {
-			this.presencePenalty = presencePenalty;
-			return self();
-		}
-
-		@Override
-		public B stopSequences(@Nullable List<String> stopSequences) {
-			this.stopSequences = stopSequences;
-			return self();
-		}
-
-		@Override
-		public B temperature(@Nullable Double temperature) {
-			this.temperature = temperature;
-			return self();
-		}
-
-		@Override
-		public B topK(@Nullable Integer topK) {
-			this.topK = topK;
-			return self();
-		}
-
-		@Override
-		public B topP(@Nullable Double topP) {
-			this.topP = topP;
 			return self();
 		}
 
@@ -947,6 +808,17 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 
 		public B apiKey(@Nullable String apiKey) {
 			this.apiKey = apiKey;
+			return self();
+		}
+
+		/**
+		 * Sets the API key using an {@link ApiKey} instance. Pass a {@link NoopApiKey} to
+		 * disable authentication (no {@code Authorization} header will be sent), which is
+		 * the same behavior as setting an empty string via {@link #apiKey(String)}.
+		 * @param apiKey the API key instance; if {@code null}, the key is cleared
+		 */
+		public B apiKey(@Nullable ApiKey apiKey) {
+			this.apiKey = (apiKey != null) ? apiKey.getValue() : null;
 			return self();
 		}
 
@@ -1005,8 +877,8 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 			return self();
 		}
 
-		public B customHeaders(Map<String, String> customHeaders) {
-			this.customHeaders = customHeaders != null ? new HashMap<>(customHeaders) : new HashMap<>();
+		public B customHeaders(@Nullable Map<String, String> customHeaders) {
+			this.customHeaders = customHeaders;
 			return self();
 		}
 
@@ -1027,10 +899,12 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 
 		public B maxCompletionTokens(@Nullable Integer maxCompletionTokens) {
 			if (maxCompletionTokens != null && this.maxTokens != null) {
-				logger.warn(
-						"Both maxTokens and maxCompletionTokens are set. OpenAI API does not support setting both parameters simultaneously. "
-								+ "As maxToken is deprecated, we will use maxCompletionToken ({}).",
-						maxCompletionTokens);
+				if (logger.isWarnEnabled()) {
+					logger.warn(
+							"Both maxTokens and maxCompletionTokens are set. OpenAI API does not support setting both parameters simultaneously. "
+									+ "As maxToken is deprecated, we will use maxCompletionToken ("
+									+ maxCompletionTokens + ").");
+				}
 				this.maxTokens(null);
 			}
 			this.maxCompletionTokens = maxCompletionTokens;
@@ -1040,11 +914,6 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 		public B n(@Nullable Integer n) {
 			this.n = n;
 			return self();
-		}
-
-		@Deprecated
-		public B N(@Nullable Integer n) {
-			return n(n);
 		}
 
 		public B outputModalities(@Nullable List<String> outputModalities) {
@@ -1166,7 +1035,14 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 					this.proxy = that.proxy;
 				}
 				if (that.logitBias != null) {
-					this.logitBias = that.logitBias;
+					if (this.logitBias == null) {
+						this.logitBias = new HashMap<>(that.logitBias);
+					}
+					else {
+						Map<String, Integer> merged = new HashMap<>(this.logitBias);
+						merged.putAll(that.logitBias);
+						this.logitBias = merged;
+					}
 				}
 				if (that.logprobs != null) {
 					this.logprobs = that.logprobs;
@@ -1181,7 +1057,14 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 					this.n = that.n;
 				}
 				if (that.outputModalities != null) {
-					this.outputModalities = that.outputModalities;
+					if (this.outputModalities == null) {
+						this.outputModalities = new ArrayList<>(that.outputModalities);
+					}
+					else {
+						List<String> merged = new ArrayList<>(this.outputModalities);
+						merged.addAll(that.outputModalities);
+						this.outputModalities = merged;
+					}
 				}
 				if (that.outputAudio != null) {
 					this.outputAudio = that.outputAudio;
@@ -1208,7 +1091,14 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 					this.store = that.store;
 				}
 				if (that.metadata != null) {
-					this.metadata = that.metadata;
+					if (this.metadata == null) {
+						this.metadata = new HashMap<>(that.metadata);
+					}
+					else {
+						Map<String, String> merged = new HashMap<>(this.metadata);
+						merged.putAll(that.metadata);
+						this.metadata = merged;
+					}
 				}
 				if (that.reasoningEffort != null) {
 					this.reasoningEffort = that.reasoningEffort;
@@ -1221,9 +1111,13 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 				}
 				if (that.extraBody != null) {
 					if (this.extraBody == null) {
-						this.extraBody = new HashMap<>();
+						this.extraBody = new HashMap<>(that.extraBody);
 					}
-					this.extraBody.putAll(that.extraBody);
+					else {
+						Map<String, Object> merged = new HashMap<>(this.extraBody);
+						merged.putAll(that.extraBody);
+						this.extraBody = merged;
+					}
 				}
 				if (that.isMicrosoftFoundry != null) {
 					this.isMicrosoftFoundry = that.isMicrosoftFoundry;
@@ -1231,8 +1125,15 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 				if (that.isGitHubModels != null) {
 					this.isGitHubModels = that.isGitHubModels;
 				}
-				if (that.customHeaders != null && !that.customHeaders.isEmpty()) {
-					this.customHeaders = that.customHeaders;
+				if (that.customHeaders != null) {
+					if (this.customHeaders == null) {
+						this.customHeaders = new HashMap<>(that.customHeaders);
+					}
+					else {
+						Map<String, String> merged = new HashMap<>(this.customHeaders);
+						merged.putAll(that.customHeaders);
+						this.customHeaders = merged;
+					}
 				}
 				if (that.timeout != null) {
 					this.timeout = that.timeout;
@@ -1248,15 +1149,13 @@ public class OpenAiChatOptions implements ToolCallingChatOptions, StructuredOutp
 		public OpenAiChatOptions build() {
 			return new OpenAiChatOptions(this.baseUrl, this.apiKey, this.credential, this.model,
 					this.microsoftDeploymentName, this.microsoftFoundryServiceVersion, this.organizationId,
-					Boolean.TRUE.equals(this.isMicrosoftFoundry), Boolean.TRUE.equals(this.isGitHubModels),
-					this.timeout != null ? this.timeout : AbstractOpenAiOptions.DEFAULT_TIMEOUT,
-					this.maxRetries != null ? this.maxRetries : AbstractOpenAiOptions.DEFAULT_MAX_RETRIES, this.proxy,
+					this.isMicrosoftFoundry, this.isGitHubModels, this.timeout, this.maxRetries, this.proxy,
 					this.customHeaders, this.frequencyPenalty, this.maxTokens, this.presencePenalty, this.stopSequences,
-					this.temperature, this.topP, this.toolCallbacks, this.toolNames, this.toolContext,
-					this.internalToolExecutionEnabled, this.logitBias, this.logprobs, this.topLogprobs,
-					this.maxCompletionTokens, this.n, this.outputModalities, this.outputAudio, this.responseFormat,
-					this.streamOptions, this.seed, this.toolChoice, this.user, this.parallelToolCalls, this.store,
-					this.metadata, this.reasoningEffort, this.verbosity, this.serviceTier, this.extraBody);
+					this.temperature, this.topP, this.toolCallbacks, this.toolContext, this.logitBias, this.logprobs,
+					this.topLogprobs, this.maxCompletionTokens, this.n, this.outputModalities, this.outputAudio,
+					this.responseFormat, this.streamOptions, this.seed, this.toolChoice, this.user,
+					this.parallelToolCalls, this.store, this.metadata, this.reasoningEffort, this.verbosity,
+					this.serviceTier, this.extraBody);
 		}
 
 	}
